Add git repo to about.html

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   </li>
   <li><a href="https://www.here.com/">HERE</a></li>
   <li><a href="https://www.strava.com/">Strava</a></li>
-  <li><a href="">Github repo</a></li>
+  <li><a href="https://github.com/aceriverson/titles.run">Github repo</a></li>
   <br />
   <p>
     Proudly hosted by
